force-app/main/default/objects/Log_de_Integracao__c/Log_de_Integracao__c.object-meta.xml
<CustomObject>
    <label>Log de Integração</label>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>Nome de Log de Integração</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs de Integração</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>