force-app/main/default/objects/Log_de_Integracao__c/fields/Classe_Apex__c.field-meta.xml
<CustomField>
    <fullName>Classe_Apex__c</fullName>
    <label>Classe Apex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>