force-app/main/default/objects/Log_de_Integracao__c/fields/Codigo_do_Status_da_Resposta__c.field-meta.xml
<CustomField>
    <fullName>Codigo_do_Status_da_Resposta__c</fullName>
    <label>Código do Status da Resposta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>