force-app/main/default/objects/Log_de_Integracao__c/fields/Endpoint_Utilizado__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Utilizado__c</fullName>
    <label>Endpoint Utilizado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>