force-app/main/default/objects/Log_de_Integracao__c/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <label>Headers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>