force-app/main/default/objects/Log_de_Integracao__c/fields/Status_da_Resposta__c.field-meta.xml
<CustomField>
    <fullName>Status_da_Resposta__c</fullName>
    <label>Status da Resposta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>