force-app/main/default/objects/Log_de_Integracao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Classe_Apex__c</columns>
    <columns>Codigo_do_Status_da_Resposta__c</columns>
    <columns>Endpoint_Utilizado__c</columns>
    <columns>Status_da_Resposta__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>