force-app/main/default/objects/Log_de_Integracao__c/listViews/One_Log_de_Integracao.listView-meta.xml
<ListView>
    <fullName>One_Log_de_Integracao</fullName>
    <filterScope>Queue</filterScope>
    <label>One</label>
    <queue>One</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>